--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Time, Space, and Complexity.</h1>
+	<p>Time Complexity is all about how mush time we are spending for a code , as a programer we can run a code as more efficient.</p>
+	<p><b>Space Complexity</b> is all about how much space is oocupied for code. For an example, if a program takes an array size n as an input, the space complexity becomes the O(n).</p>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
