--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Time and Space Complexity</h1>
-	<p>Time Complexity that describes the required to executive an algorithm , as a programer we can run a code as more efficient.</p>
+	<p>Time Complexity that describes the time required to executive an algorithm , as a programer we can run a code as more efficient.</p>
 	<p><b>Space Complexity</b> is describes that how much memory is oocupied for code. For an example, if a program takes an array size n as an input, the space complexity becomes the O(n).</p>
 	
 
